--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.17.7",
+    "swiper": "^11.2.10",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
