--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "nuxt": "^3.17.7",
     "swiper": "^11.2.10",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   }
 }
